# finance

./: .gitignore  README.md
tidy-finance/: main.py  pyproject.toml
tidy-finance/src/tidy_finance/: ch1_1_working_with_stock_returns.py  ch1_2_modern_portfolio_theory.py  ch1_3_capital_asset_pricing_model.py
